syntax = "proto3";
package orders;
option go_package = "./orders";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

enum ServiceName { PingOrders = 0; }

service OrdersService {
  rpc PingOrders(google.protobuf.Empty) returns (GrpcResponse) {}
}

message GrpcResponse {
  int32 stat_code = 1;
  string stat_message = 2;
  optional google.protobuf.Any data = 3;
}